--- a/Biography.html
+++ b/Biography.html
@@ -10,7 +10,7 @@
 <body style='background-color:Lightpink'>
   <div style="text-align: center">
     <h1>BIOGRAPHY</h1>
-  <img src="Moyafotka.jpg" width="250px"alt="Moyafotka">
+  <img src="MoyaFotka.jpg" width="250px"alt="Moyafotka">
 <p>
 Hello. You are on a page about me. My name is <i> Semyonova Dasha </i>.</p>
 <p>
